src/index.css
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;600;700&display=swap');

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-size: 62.5%;
    font-family: 'League Spartan', sans-serif;
}

body {
    min-height: 100vh;
    background-color: var(--Main-background);
    overflow-x: hidden;
    padding: 2.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 0.6s;
}

/*******************
     VARIABLES
********************/
:root {
    /* Main Background Color */
    --Main-background: hsl(222, 26%, 31%);

    /* Header Colors */
    --Header-clr: hsl(0, 0%, 100%);

    /* Toggle Colors */
    --Toggle-background: hsl(223, 31%, 20%);
    --Toggle-color: hsl(6, 63%, 50%);

    /* Output background */
    --Output-background: hsl(224, 36%, 15%);

    /* Keys */
        /* Primary Keys */
        --Primary-keys: hsl(30, 25%, 89%);
        --Primary-keys-shadow: hsl(28, 16%, 65%);

        /* Secondary Keys */
        --Secondary-keys: hsl(225, 21%, 49%);
        --Secondary-keys-shadow: hsl(224, 28%, 35%);

        /* Tertiary Keys */
        --Tertiary-keys: hsl(6, 63%, 50%);
        --Tertiary-keys-shadow: hsl(6, 70%, 34%);

    /* Button Fonts Colors */
    --Btn-font-primary-clr: hsl(221, 14%, 31%);
    --Btn-font-secondary-clr: hsl(0, 0%, 100%);
    --Btn-font-evaluate-clr: hsl(0, 0%, 100%);

    /* Button Hover Colors */
    --Primary-hover-clr: #fffffe;
    --Secondary-hover-clr: #A2B2E1;
    --Tertiary-hover-clr: #f96b5b;
}

/* Theme Toggle */
:root:has(#white:checked) {
    --Main-background: hsl(0, 0%, 90%);

    --Header-clr: hsl(60, 9%, 19%);

    --Toggle-background: hsl(0, 5%, 81%);
    --Toggle-color: hsl(25, 98%, 40%);

    --Output-background: hsl(0, 0%, 93%);

    --Primary-keys: hsl(45, 7%, 89%);
    --Primary-keys-shadow: hsl(35, 11%, 61%);

    --Secondary-keys: hsl(185, 42%, 37%);
    --Secondary-keys-shadow: hsl(185, 58%, 25%);

    --Tertiary-keys: hsl(25, 98%, 40%);
    --Tertiary-keys-shadow: hsl(25, 99%, 27%);

    --Btn-font-primary-clr: hsl(60, 10%, 19%);
    --Btn-font-secondary-clr: hsl(0, 0%, 100%);
    --Btn-font-evaluate-clr: hsl(0, 0%, 100%);

    --Primary-hover-clr: hsl(0, 0%, 100%);
    --Secondary-hover-clr: #62b5bc;
    --Tertiary-hover-clr: #ff8a38;

}


:root:has(#purple:checked) {
    --Main-background: hsl(268, 75%, 9%);

    --Header-clr: hsl(52, 100%, 62%);

    --Toggle-background: hsl(268, 71%, 12%);
    --Toggle-color: hsl(176, 100%, 44%);

    --Output-background: hsl(268, 71%, 12%);

    --Primary-keys: hsl(268, 47%, 21%);
    --Primary-keys-shadow: hsl(290, 70%, 36%);

    --Secondary-keys: hsl(281, 89%, 26%);
    --Secondary-keys-shadow: hsl(285, 91%, 52%);

    --Tertiary-keys: hsl(176, 100%, 44%);
    --Tertiary-keys-shadow: hsl(177, 92%, 70%);

    --Btn-font-primary-clr: hsl(52, 100%, 62%);
    --Btn-font-secondary-clr: hsl(0, 0%, 100%);
    --Btn-font-evaluate-clr: hsl(198, 20%, 13%);

    --Primary-hover-clr: #6c34ac;
    --Secondary-hover-clr: #8631af;
    --Tertiary-hover-clr: #93fff8;
}



/* FALLBACKS FOR NO :HAS() SUPPORT */
.blue {
    /* Main Background Color */
    --Main-background: hsl(222, 26%, 31%);

    /* Header Colors */
    --Header-clr: hsl(0, 0%, 100%);

    /* Toggle Colors */
    --Toggle-background: hsl(223, 31%, 20%);
    --Toggle-color: hsl(6, 63%, 50%);

    /* Output background */
    --Output-background: hsl(224, 36%, 15%);

    /* Keys */
        /* Primary Keys */
        --Primary-keys: hsl(30, 25%, 89%);
        --Primary-keys-shadow: hsl(28, 16%, 65%);

        /* Secondary Keys */
        --Secondary-keys: hsl(225, 21%, 49%);
        --Secondary-keys-shadow: hsl(224, 28%, 35%);

        /* Tertiary Keys */
        --Tertiary-keys: hsl(6, 63%, 50%);
        --Tertiary-keys-shadow: hsl(6, 70%, 34%);

    /* Button Fonts Colors */
    --Btn-font-primary-clr: hsl(221, 14%, 31%);
    --Btn-font-secondary-clr: hsl(0, 0%, 100%);
    --Btn-font-evaluate-clr: hsl(0, 0%, 100%);

    /* Button Hover Colors */
    --Primary-hover-clr: #fffffe;
    --Secondary-hover-clr: #A2B2E1;
    --Tertiary-hover-clr: #f96b5b;
}

.white {
--Main-background: hsl(0, 0%, 90%);

--Header-clr: hsl(60, 9%, 19%);

--Toggle-background: hsl(0, 5%, 81%);
--Toggle-color: hsl(25, 98%, 40%);

--Output-background: hsl(0, 0%, 93%);

--Primary-keys: hsl(45, 7%, 89%);
--Primary-keys-shadow: hsl(35, 11%, 61%);

--Secondary-keys: hsl(185, 42%, 37%);
--Secondary-keys-shadow: hsl(185, 58%, 25%);

--Tertiary-keys: hsl(25, 98%, 40%);
--Tertiary-keys-shadow: hsl(25, 99%, 27%);

--Btn-font-primary-clr: hsl(60, 10%, 19%);
--Btn-font-secondary-clr: hsl(0, 0%, 100%);
--Btn-font-evaluate-clr: hsl(0, 0%, 100%);

--Primary-hover-clr: hsl(0, 0%, 100%);
--Secondary-hover-clr: #62b5bc;
--Tertiary-hover-clr: #ff8a38;
}

.purple {
--Main-background: hsl(268, 75%, 9%);

--Header-clr: hsl(52, 100%, 62%);

--Toggle-background: hsl(268, 71%, 12%);
--Toggle-color: hsl(176, 100%, 44%);

--Output-background: hsl(268, 71%, 12%);

--Primary-keys: hsl(268, 47%, 21%);
--Primary-keys-shadow: hsl(290, 70%, 36%);

--Secondary-keys: hsl(281, 89%, 26%);
--Secondary-keys-shadow: hsl(285, 91%, 52%);

--Tertiary-keys: hsl(176, 100%, 44%);
--Tertiary-keys-shadow: hsl(177, 92%, 70%);

--Btn-font-primary-clr: hsl(52, 100%, 62%);
--Btn-font-secondary-clr: hsl(0, 0%, 100%);
--Btn-font-evaluate-clr: hsl(198, 20%, 13%);

--Primary-hover-clr: #6c34ac;
--Secondary-hover-clr: #8631af;
--Tertiary-hover-clr: #93fff8;
}





/*******************
     CALCULATOR
********************/
.calculator {
    max-width: 32.7rem;
    margin: 0 auto;
}


/* Header */
.calculator .header {
    display: flex;
    justify-content: space-between;
}

/* 'calc' text in header */
.calculator .header  h1 {
    font-size: 3.2rem;
    color: var(--Header-clr);
    align-self: flex-end;
    padding-left: 0.5rem;
    font-weight: 600;
}


/* Theme Switcher Wrapper */
.theme-switcher-wrapper {
    display: flex;
    gap: 2.55rem;
}

.theme-switcher-wrapper h2 {
    color: var(--Header-clr);
    font-size: 1.2rem;
    align-self: flex-end;
    font-weight: 700;
    position: relative;
    bottom: 4px;
    text-transform: uppercase;
    letter-spacing: 1px;
}

/* Inner Wrapper */
.toggler-wrapper {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}


.toggler-wrapper .numbers {
    display: flex;
    color: var(--Header-clr);
    justify-content: center;
    gap: 1.65rem;
    font-size: 1.2rem;
    font-weight: 700;
    position: relative;
    left: 1px;
    height: 1.1rem;
}



/* Radio Buttons / Toggler */
.theme-switcher > fieldset {
    border: 0;
    height: 2.6rem;
    width: 7.1rem;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background-color: var(--Toggle-background);
    border-radius: 30px;
    margin-inline: auto;
    position: relative;
}

.theme-switcher label {
    color: var(--Header-clr);
    font-size: 1.2rem;
    font-weight: 600;
    cursor: pointer;
}

.theme-switcher label:nth-of-type(1) {
    position: absolute;
    top: -16px;
    left: 12px;
}

.theme-switcher label:nth-of-type(2) {
    position: absolute;
    top: -16px;
    left: 33px;
}

.theme-switcher label:nth-of-type(3) {
    position: absolute;
    top: -16px;
    right: 9px;
}

.theme-switcher input[type='radio'] {
    color: transparent;
    appearance: none;
    width: 1.6rem;
    height: 1.6rem;
    border-radius: 50%;
    cursor: pointer;
    background-color: var(--Radio-color, currentColor);
}


.theme-switcher input[type='radio']#blue:checked {
    --Radio-color: var(--Toggle-color);
}

.theme-switcher input[type='radio']#white:checked {
    --Radio-color: var(--Toggle-color)
}

.theme-switcher input[type='radio']#purple:checked {
    --Radio-color: var(--Toggle-color)
}

/* Screen Reader only class */
.visually-hidden {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }





/*******************
     GRID
********************/
.button-grid {
    display: grid;
    grid-template-columns: repeat(4, 6rem);
    grid-template-rows: repeat(5, 6.4rem);
    margin-top: 2rem;
    padding: 2.4rem;
    gap: 1.3rem;
    justify-content: center;
    background-color: var(--Toggle-background);
    border-radius: 10px;
}

.span-two {
    grid-column: span 2;
}


/* Output */
.output {
    height: fit-content;
    min-height: 8.8rem;
    background-color: var(--Output-background);
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-top: 3.6rem;
    padding: 2.4rem;
    word-wrap: break-word;
    word-break: break-all;
    white-space: pre-line;
}

.output .current-operand {
    color: var(--Header-clr);
    font-size: 4rem;
    font-weight: 700;
    position: relative;
    top: 0.2rem;
}


/* Buttons */
.button-grid > button {
    cursor: pointer;
    outline: none;
    border-top: none;
    border-left: none;
    border-right: none;
    font-family: inherit;
    border-radius: 7px;
}

.button-primary {
    background-color: var(--Primary-keys);
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--Btn-font-primary-clr);
    font-size: 3.2rem;
    font-weight: 700;
    border: 4px solid var(--Primary-keys-shadow);
}

.button-primary:hover,
.button-primary:focus {
    background-color: var(--Primary-hover-clr);
}

.button-secondary {
    background-color: var(--Secondary-keys);
    color: var(--Btn-font-secondary-clr);
    font-size: 2rem;
    font-weight: 600;
    border: 4px solid var(--Secondary-keys-shadow);
}

.button-secondary:hover,
.button-secondary:focus {
    background-color: var(--Secondary-hover-clr);
}

.button-tertiary {
    background-color: var(--Tertiary-keys);
    font-size: 2rem;
    color: var(--Btn-font-evaluate-clr);
    font-weight: 600;
    border: 4px solid var(--Tertiary-keys-shadow);
}

.button-tertiary:hover,
.button-tertiary:focus {
    background-color: var(--Tertiary-hover-clr);
}



@media screen and (min-width: 768px) {
    .calculator {
        max-width: 54rem;
    }

    .button-grid {
        grid-template-columns: repeat(4, 10.1rem);
        gap: 2.5rem 2.4rem;
        padding: 3.2rem 3rem;
    }

    .output {
        min-height: 12.8rem;
    }

    .output .current-operand {
        font-size: 5.6rem;
    }

    .button-primary {
        font-size: 4rem;
    }

    .button-secondary {
        font-size: 2.8rem;
    }

    .button-tertiary {
        font-size: 2.8rem;
    }
}

